@@ -30,6 +30,7 @@ Version 3.0.0 - 21 October 2009
  - Added 'make check' dependency on submitclient.
  - Only show the configured submission methods in the team manual.
  - Fix install of gendbpasswords and use /dev/urandom.
+ - Fix bug in handling of libmagic cookie.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
